feat: port Bounds, Points, MathUtil, SphericalUtil, and Gradient to Kotlin